// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`allows any candidate to be selected when no candidate is selected 1`] = `
.c1 {
  line-height: 1.3;
  max-width: 66ch;
}

.c1 h1 {
  margin: 2rem 0 1rem;
}

.c1 h2 {
  margin: 1.5rem 0 1rem;
}

.c1 h3,
.c1 p {
  margin: 1rem 0;
}

.c1 h1 + p,
.c1 h2 + p,
.c1 h3 + p {
  margin-top: -0.75rem;
}

.c1 > :first-child {
  margin-top: 0;
}

.c1 > :last-child {
  margin-bottom: 0;
}

.c0 {
  margin: 0 0 1rem 4rem;
}

.c2 {
  display: grid;
  grid-auto-rows: minmax(auto,1fr);
  grid-gap: 0.75rem;
}

.c3 {
  position: relative;
  cursor: pointer;
  display: grid;
  grid-template-columns: 3fr 1fr;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 0.125rem;
  background: white;
  box-shadow: 0 0.125rem 0.125rem 0 rgba(0,0,0,0.14), 0 0.1875rem 0.0625rem -0.125rem rgba(0,0,0,0.12), 0 0.0625rem 0.3125rem 0 rgba(0,0,0,0.2);
  -webkit-transition: background 0.25s,color 0.25s;
  transition: background 0.25s,color 0.25s;
}

.c3:focus-within {
  outline: -webkit-focus-ring-color auto 5px;
}

.c3 > div {
  padding: 1rem;
}

.c3 > input + div:before {
  content: '';
  position: absolute;
  left: 0;
  top: 0;
  bottom: 0;
  border-right: 1px solid lightgrey;
  width: 3rem;
  text-align: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 2rem;
  border-radius: 0.125rem 0 0 0.125rem;
}

.c3 > input:checked + div:before {
  content: '✓';
  background: white;
  color: #028099;
  border-color: #028099;
}

.c3 > div:first-of-type {
  padding-left: 4rem;
}

.c3 .write-in-candidate-name {
  grid-column: span 2;
}

.c4 {
  margin-right: 0.5rem;
}

<div>
  <fieldset
    class=""
  >
    <legend
      class="c0"
    >
      <div
        class="c1"
      >
        <h1>
          President
        </h1>
        <p>
          <strong>
            Vote for 1.
          </strong>
           You have selected
           
          0
          .
        </p>
      </div>
    </legend>
    <div
      class="c2"
    >
      <label
        class="c3"
        for="Minnie Mouse"
      >
        <input
          class="visually-hidden c4"
          id="Minnie Mouse"
          name="president"
          type="checkbox"
          value="Minnie Mouse"
        />
        <div>
          <strong>
            Minnie Mouse
          </strong>
        </div>
        <div>
          Mouse
        </div>
      </label>
      <label
        class="c3"
        for="Mickey Mouse"
      >
        <input
          class="visually-hidden c4"
          id="Mickey Mouse"
          name="president"
          type="checkbox"
          value="Mickey Mouse"
        />
        <div>
          <strong>
            Mickey Mouse
          </strong>
        </div>
        <div>
          Mouse
        </div>
      </label>
      <label
        class="c3"
        for="Donald Duck"
      >
        <input
          class="visually-hidden c4"
          id="Donald Duck"
          name="president"
          type="checkbox"
          value="Donald Duck"
        />
        <div>
          <strong>
            Donald Duck
          </strong>
        </div>
        <div>
          Duck
        </div>
      </label>
      <label
        class="c3"
        for="writeInCandidate"
      >
        <input
          class="visually-hidden c4"
          id="writeInCandidate"
          name="president"
          type="checkbox"
          value="writeInCandidate"
        />
        <div
          class="write-in-candidate-name"
        >
          <em>
            add a write-in candidate
          </em>
        </div>
      </label>
    </div>
  </fieldset>
</div>
`;

exports[`doesn't allow other candidates to be selected when one candidate is selected 1`] = `
.c1 {
  line-height: 1.3;
  max-width: 66ch;
}

.c1 h1 {
  margin: 2rem 0 1rem;
}

.c1 h2 {
  margin: 1.5rem 0 1rem;
}

.c1 h3,
.c1 p {
  margin: 1rem 0;
}

.c1 h1 + p,
.c1 h2 + p,
.c1 h3 + p {
  margin-top: -0.75rem;
}

.c1 > :first-child {
  margin-top: 0;
}

.c1 > :last-child {
  margin-bottom: 0;
}

.c0 {
  margin: 0 0 1rem 4rem;
}

.c2 {
  display: grid;
  grid-auto-rows: minmax(auto,1fr);
  grid-gap: 0.75rem;
}

.c5 {
  position: relative;
  cursor: pointer;
  display: grid;
  grid-template-columns: 3fr 1fr;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 0.125rem;
  background: white;
  box-shadow: 0 0.125rem 0.125rem 0 rgba(0,0,0,0.14), 0 0.1875rem 0.0625rem -0.125rem rgba(0,0,0,0.12), 0 0.0625rem 0.3125rem 0 rgba(0,0,0,0.2);
  -webkit-transition: background 0.25s,color 0.25s;
  transition: background 0.25s,color 0.25s;
}

.c5:focus-within {
  outline: -webkit-focus-ring-color auto 5px;
}

.c5 > div {
  padding: 1rem;
}

.c5 > input + div:before {
  content: '';
  position: absolute;
  left: 0;
  top: 0;
  bottom: 0;
  border-right: 1px solid lightgrey;
  width: 3rem;
  text-align: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 2rem;
  border-radius: 0.125rem 0 0 0.125rem;
}

.c5 > input:checked + div:before {
  content: '✓';
  background: white;
  color: #028099;
  border-color: #028099;
}

.c5 > div:first-of-type {
  padding-left: 4rem;
}

.c5 .write-in-candidate-name {
  grid-column: span 2;
}

.c3 {
  position: relative;
  cursor: pointer;
  display: grid;
  grid-template-columns: 3fr 1fr;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 0.125rem;
  background: #028099;
  color: white;
  box-shadow: 0 0.125rem 0.125rem 0 rgba(0,0,0,0.14), 0 0.1875rem 0.0625rem -0.125rem rgba(0,0,0,0.12), 0 0.0625rem 0.3125rem 0 rgba(0,0,0,0.2);
  -webkit-transition: background 0.25s,color 0.25s;
  transition: background 0.25s,color 0.25s;
}

.c3:focus-within {
  outline: -webkit-focus-ring-color auto 5px;
}

.c3 > div {
  padding: 1rem;
}

.c3 > input + div:before {
  content: '';
  position: absolute;
  left: 0;
  top: 0;
  bottom: 0;
  border-right: 1px solid lightgrey;
  width: 3rem;
  text-align: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 2rem;
  border-radius: 0.125rem 0 0 0.125rem;
}

.c3 > input:checked + div:before {
  content: '✓';
  background: white;
  color: #028099;
  border-color: #028099;
}

.c3 > div:first-of-type {
  padding-left: 4rem;
}

.c3 .write-in-candidate-name {
  grid-column: span 2;
}

.c4 {
  margin-right: 0.5rem;
}

<div>
  <fieldset
    class=""
  >
    <legend
      class="c0"
    >
      <div
        class="c1"
      >
        <h1>
          President
        </h1>
        <p>
          <strong>
            Vote for 1.
          </strong>
           You have selected
           
          1
          .
        </p>
      </div>
    </legend>
    <div
      class="c2"
    >
      <label
        class="c3"
        for="Minnie Mouse"
      >
        <input
          checked=""
          class="visually-hidden c4"
          id="Minnie Mouse"
          name="president"
          type="checkbox"
          value="Minnie Mouse"
        />
        <div>
          <strong>
            Minnie Mouse
          </strong>
        </div>
        <div>
          Mouse
        </div>
      </label>
      <label
        class="c5"
        for="Mickey Mouse"
      >
        <input
          class="visually-hidden c4"
          disabled=""
          id="Mickey Mouse"
          name="president"
          type="checkbox"
          value="Mickey Mouse"
        />
        <div>
          <strong>
            Mickey Mouse
          </strong>
        </div>
        <div>
          Mouse
        </div>
      </label>
      <label
        class="c5"
        for="Donald Duck"
      >
        <input
          class="visually-hidden c4"
          disabled=""
          id="Donald Duck"
          name="president"
          type="checkbox"
          value="Donald Duck"
        />
        <div>
          <strong>
            Donald Duck
          </strong>
        </div>
        <div>
          Duck
        </div>
      </label>
      <label
        class="c5"
        for="writeInCandidate"
      >
        <input
          class="visually-hidden c4"
          disabled=""
          id="writeInCandidate"
          name="president"
          type="checkbox"
          value="writeInCandidate"
        />
        <div
          class="write-in-candidate-name"
        >
          <em>
            add a write-in candidate
          </em>
        </div>
      </label>
    </div>
  </fieldset>
</div>
`;
